--- a/www/lib/onsen/css/onsen-css-components.css
+++ b/www/lib/onsen/css/onsen-css-components.css
@@ -1255,15 +1255,15 @@ h6 {
   appearance: none;
 }
 .button-bar__item:first-child > .button-bar__button {
-  border-left: 1px solid #1284ff;
-  border-right: 1px solid #1284ff;
+  border-left: 1px solid #47b543;
+  border-right: 1px solid #47b543;
   -webkit-border-top-left-radius: 4px;
   border-top-left-radius: 4px;
   -webkit-border-bottom-left-radius: 4px;
   border-bottom-left-radius: 4px;
 }
 .button-bar__item:last-child > .button-bar__button {
-  border-right: 1px solid #1284ff;
+  border-right: 1px solid #47b543;
   -webkit-border-top-right-radius: 4px;
   border-top-right-radius: 4px;
   -webkit-border-bottom-right-radius: 4px;
@@ -1278,11 +1278,11 @@ h6 {
   -webkit-border-radius: inherit;
   border-radius: inherit;
   background-color: transparent;
-  color: #1284ff;
-  border: 0px solid #1284ff;
-  border-top: 1px solid #1284ff;
-  border-bottom: 1px solid #1284ff;
-  border-right: 1px solid #1284ff;
+  color: #47b543;
+  border: 0px solid #47b543;
+  border-top: 1px solid #47b543;
+  border-bottom: 1px solid #47b543;
+  border-right: 1px solid #47b543;
   font-weight: 400;
   padding: 0 8px;
   height: 27px;
@@ -1300,10 +1300,10 @@ h6 {
 .button-bar__button:active,
 :active + .button-bar__button {
   background-color: rgba(18,132,255,0.2);
-  border: 0px solid #1284ff;
-  border-top: 1px solid #1284ff;
-  border-bottom: 1px solid #1284ff;
-  border-right: 1px solid #1284ff;
+  border: 0px solid #47b543;
+  border-top: 1px solid #47b543;
+  border-bottom: 1px solid #47b543;
+  border-right: 1px solid #47b543;
   height: 27px;
   line-height: 27px;
   font-size: 13px;
@@ -1315,7 +1315,7 @@ h6 {
 }
 .button-bar__item.active > .button-bar__button,
 :checked + .button-bar__button {
-  background-color: #1284ff;
+  background-color: #47b543;
   color: #fff;
   -webkit-transition: none;
   -moz-transition: none;
